k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hotstar-service
  namespace: hotstar
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  type: LoadBalancer
  selector:
    app: hotstar-app
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
